fixing footer alignment

--- a/src/components/footer/Footer.module.sass
+++ b/src/components/footer/Footer.module.sass
@@ -26,3 +26,4 @@
   .lists
     flex-direction: column
     align-items: center
+    text-align: center
